MultiTenancy/namespaces.yaml
# tenant-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a

---
# tenant-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-bw
